--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             var validusr='qwe';
             var validpass='123';
-            alert("fuck you!")
+            alert("Hello everyone")
 
             if (usr===validusr && pass===validpass){ 
                 window.location.href="page.html";
